# ds-bench

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  shell.nix
benchmarks/: CMakeLists.txt
cmake/: CompilerWarnings.cmake
include/conbench/: config.hpp
include/conbench/concepts/ds/: set_concept.hpp
include/conbench/concepts/memory/: allocator_concept.hpp
include/conbench/ds/: set_interface.hpp
include/conbench/memory/: debra.hpp  recordmanager.hpp
include/conbench/memory/allocators/: default.hpp  interface.hpp
include/conbench/memory/bag/: block.hpp
src/: CMakeLists.txt  dummy.cpp
tests/: CMakeLists.txt
